# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import battlesRouter from "./battles";
 import feedbackRouter from "./feedback";
 import waitlistRouter from "./waitlist";
 import storageRouter from "./storage";
+import contactRouter from "./contact";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use("/battles", battlesRouter);
 router.use("/feedback", feedbackRouter);
 router.use("/waitlist", waitlistRouter);
 router.use(storageRouter);
+router.use("/contact", contactRouter);
 
 export default router;
